--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -10,7 +10,7 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
-    flex-direction: row; }
+    flex-direction: column; }
     .mainContainer .container .board {
       width: 100%;
       height: 100%; }
@@ -26,6 +26,10 @@
           color: #FFF;
           letter-spacing: 2px;
           cursor: pointer; }
+          .mainContainer .container .board .levelSelection .level:nth-of-type(2) {
+            text-align: center; }
+          .mainContainer .container .board .levelSelection .level:nth-of-type(3) {
+            text-align: right; }
           .mainContainer .container .board .levelSelection .level:hover {
             -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.6) 30%, #000 50%, rgba(0, 0, 0, 0.6) 70%);
             -webkit-mask-size: 200%;
@@ -35,24 +39,14 @@
       .mainContainer .container .containerBoard .result {
         display: flex;
         justify-content: center; }
-        .mainContainer .container .containerBoard .result .reset {
-          text-align: center;
-          letter-spacing: 1px;
-          color: #fff;
-          padding: 4px 10px;
-          border-radius: 10px;
-          letter-spacing: 1px;
-          border: 2px solid #fff;
-          background: none;
-          outline: none;
-          cursor: pointer; }
-          .mainContainer .container .containerBoard .result .reset:hover {
-            -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.5) 30%, #000 50%, rgba(0, 0, 0, 0.5) 70%);
-            -webkit-mask-size: 200%;
-            animation: shine 3s infinite; }
       .mainContainer .container .containerBoard .row {
         width: 100%;
         height: 80px;
+        margin-bottom: 10px;
         display: flex;
         justify-content: space-between;
         flex-direction: row; }
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .mainContainer .container .containerBoard .row {
+    height: 120px; } }
