--- a/src/Components/Board.scss
+++ b/src/Components/Board.scss
@@ -14,7 +14,7 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    flex-direction:  column;
     .board {
       width: 100%;
       height: 100%;
@@ -30,6 +30,12 @@
           color: #FFF;
           letter-spacing: 2px;
           cursor: pointer;
+          &:nth-of-type(2){
+            text-align: center;
+          }
+          &:nth-of-type(3){
+            text-align: right;
+          }
           &:hover {
               -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
               -webkit-mask-size: 200%;
@@ -43,27 +49,11 @@
         .result {
           display: flex;
           justify-content: center;
-          .reset {
-            text-align: center;
-            letter-spacing: 1px;
-            color: #fff;
-            padding: 4px 10px;
-            border-radius: 10px;
-            letter-spacing: 1px;
-            border: 2px solid #fff;
-            background: none;
-            outline: none;
-            cursor: pointer;
-            &:hover {
-              -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,0.5) 30%, #000 50%, rgba(0,0,0,0.5) 70%);
-              -webkit-mask-size: 200%;
-              animation: shine 3s infinite;
-            }
-          }
         }
         .row {
           width: 100%;
           height: 80px;
+          margin-bottom: 10px;
           display: flex;
           justify-content: space-between;
           flex-direction: row;
@@ -71,3 +61,14 @@
       }
     }
   }
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .mainContainer {
+    .container {
+      .containerBoard {
+        .row {
+          height: 120px;
+        }
+      }
+    }
+  }
+}
