--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -20,7 +20,7 @@
       width: 100%;
       height: 100%;
       backface-visibility: hidden;
-      background-image: linear-gradient(to right, #dbba00, #e4c100, #edc900, #f6d000, #ffd800);
+      background-color: #eee;
       text-align: center;
       border-radius: 10px; }
     .cardContainer .card .backCard {
@@ -32,79 +32,129 @@
       height: 100%;
       backface-visibility: hidden;
       background: none;
-      border: 2px solid #dbba00;
+      border: 2px solid #eee;
       border-radius: 10px;
       text-align: center;
       transform: rotateY(180deg); }
       .cardContainer .card .backCard .logo0 {
         background-image: url("../logo-memoryCard/python.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo1 {
         background-image: url("../logo-memoryCard/angular.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo2 {
         background-image: url("../logo-memoryCard/c.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo3 {
         background-image: url("../logo-memoryCard/swift.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo4 {
         background-image: url("../logo-memoryCard/redux.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo5 {
         background-image: url("../logo-memoryCard/ruby.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo6 {
         background-image: url("../logo-memoryCard/css.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo7 {
         background-image: url("../logo-memoryCard/html5.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo8 {
         background-image: url("../logo-memoryCard/js.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo9 {
         background-image: url("../logo-memoryCard/cc.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo10 {
         background-image: url("../logo-memoryCard/vue.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
       .cardContainer .card .backCard .logo11 {
         background-image: url("../logo-memoryCard/react.jpg");
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
-        width: 75px;
-        height: 75px; }
+        width: 40px;
+        height: 40px; }
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .cardContainer .card .backCard .logo0 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo1 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo2 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo3 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo4 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo5 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo6 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo7 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo8 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo9 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo10 {
+    width: 50px;
+    height: 50px; }
+  .cardContainer .card .backCard .logo11 {
+    width: 50px;
+    height: 50px; } }
