--- a/src/Components/Clock.css
+++ b/src/Components/Clock.css
@@ -1,17 +1,49 @@
+@-webkit-keyframes shine {
+  from {
+    -webkit-mask-position: 150%; }
+  to {
+    -webkit-mask-position: -50%; } }
+
 .clock {
-  width: 500px;
+  width: 100%;
   height: 500px;
-  margin-top: 100px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
-  font-size: 150%;
-  color: #FFDE00; }
-  .clock .startTimer {
-    width: 80%;
-    text-align: center;
-    border: 3px dotted #fff;
-    cursor: pointer;
-    margin: 10px 10%; }
+  font-size: 110%;
+  color: #eee; }
+  .clock .handleBtns {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem; }
+    .clock .handleBtns .reset {
+      width: 54%;
+      text-align: center;
+      letter-spacing: 1px;
+      color: #fff;
+      padding: 4px 10px;
+      border-bottom: 2px solid #fff;
+      background: none;
+      outline: none;
+      cursor: pointer; }
+      .clock .handleBtns .reset:hover {
+        -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.5) 30%, #000 50%, rgba(0, 0, 0, 0.5) 70%);
+        -webkit-mask-size: 200%;
+        animation: shine 3s infinite; }
+    .clock .handleBtns .startTimer {
+      width: 30%;
+      text-align: center;
+      letter-spacing: 1px;
+      color: #fff;
+      padding: 4px 10px;
+      border-bottom: 2px solid #fff;
+      background: none;
+      outline: none;
+      cursor: pointer; }
+      .clock .handleBtns .startTimer:hover {
+        -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.5) 30%, #000 50%, rgba(0, 0, 0, 0.5) 70%);
+        -webkit-mask-size: 200%;
+        animation: shine 3s infinite; }
   .clock .timer span {
     padding-left: 25px; }
   .clock .timeGuessed {
